# Discord-Yt-music-bot

./: main.py  pyproject.toml  token.env
