[tool.poetry]
name = "superbedibleadmins"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
googletrans = "^3.0.0"
discord = "^1.0.1"
python-dotenv = "^0.19.0"
youtube_dl = "^2021.6.6"
Flask = "^2.0.1"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
